syntax = "proto3";

package bilibili.metadata;

message Metadata {
    /** 登录鉴权 */
    string access_key = 1;
    /** 包类型 */
    string mobi_app = 2;
    /** 运行设备 */
    optional string device = 3;
    /** 构建号 */
    int32 build = 4;
    /** 渠道 */
    string channel = 5;
    /** 设备buvid */
    string buvid = 6;
    /** 设备类型 */
    string platform = 7;
}