syntax = "proto3";

package bilibili.playershared;

/** 播放页信息-响应: VOD音视频信息 */
message VodInfo {
    /** 视频清晰度 */
    uint32 quality = 1;
    /** 视频格式 */
    string format = 2;
    /** 视频时长 */
    uint64 timelength = 3;
    /** 视频编码id */
    uint32 video_codecid = 4;
    /** 视频流 */
    repeated Stream stream_list = 5;
    /** 伴音流 */
    repeated DashItem dash_audio = 6;
    /** 杜比伴音流 */
    optional DolbyItem dolby = 7;
    /** 响度均衡操作信息 */
    optional VolumeInfo volume = 8;
    /** HIRES伴音流信息 */
    optional LossLessItem loss_less_item = 9;
    /** 是否支持投屏 */
    optional bool support_project = 10;
}

/** 视频流信息 */
message Stream {
    /** 元数据 */
    StreamInfo stream_info = 1;
    /** 流数据 */
    oneof content {
        /** dash流 */
        DashVideo dash_video = 2;
        /** 分段流 */
        SegmentVideo segment_video = 3;
    }
}

/** 视频流信息: 元数据 */
message StreamInfo {
    /** 清晰度 */
    uint32 quality = 1;
    /** 格式 */
    string format = 2;
    /** 格式描述 */
    string description = 3;
    /** 错误码 */
    optional uint32 err_code = 4;
    /** 不满足条件信息 */
    optional StreamLimit limit = 5;
    /** 是否需要vip */
    bool need_vip = 6;
    /** 是否需要登录 */
    bool need_login = 7;
    /** 是否完整 */
    bool intact = 8;
    /** 是否非全二压 */
    optional bool no_rexcode = 9;
    /** 清晰度属性位 */
    optional int64 attribute = 10;
    /** 新版格式描述 */
    string new_description = 11;
    /** 格式文字 */
    string display_desc = 12;
    /** 新版格式描述备注 */
    string superscript = 13;

    optional bool vip_free = 14;

    optional string subtitle = 15;
    /** 方案 */
    optional Scheme scheme = 16;
    /** 支持drm */
    bool support_drm = 17;
}

/** 视频流信息: 流媒体元数据: 清晰度不满足条件信息 */
message StreamLimit {
    /** 标题 */
    string title = 1;
    /** 跳转地址 */
    string uri = 2;
    /** 提示信息 */
    string msg = 3;
}

/** 方案 */
message Scheme {
    enum ActionType {
        UNKNOWN = 0;
        SHOW_TOAST = 1;
    }

    ActionType action_type = 1;

    string toast = 2;
}

/** 视频流信息: dash流 */
message DashVideo {
    /** 主线流 */
    string base_url = 1;
    /** 备用流 */
    repeated string backup_url = 2;
    /** 带宽 */
    uint32 bandwidth = 3;
    /**
     * 编码id
     * | 7 | 12 | 13 |
     * | :-: | :-: | :-: |
     * | AVC | HEVC | AV1 |
     */
    uint32 codecid = 4;
    /** md5 */
    optional string md5 = 5;
    /** 大小 */
    uint64 size = 6;
    /** 伴音质量id */
    uint32 audio_id = 7;
    /** 是否非全二压 */
    optional bool no_rexcode = 8;
    /** 帧率 */
    string frame_rate = 9;
    /** 宽 */
    int32 width = 10;
    /** 高 */
    int32 height = 11;
    /** DRM密钥 */
    optional string widevine_pssh = 12;
}

/** 视频流信息: 分段流 */
message SegmentVideo {
    repeated ResponseUrl segment = 1;
}

/** 分段流条目 */
message ResponseUrl {
    /** 分段序号 */
    uint32 order = 1;
    /** 分段时长 */
    uint64 length = 2;
    /** 分段大小 */
    uint64 size = 3;
    /** 主线流 */
    string url = 4;
    /** 备用流 */
    repeated string backup_url = 5;
    /** md5 */
    optional string md5 = 6;
}

/** Dash条目 */
message DashItem {
    /** 清晰度 */
    uint32 id = 1;
    /** 主线流 */
    string base_url = 2;
    /** 备用流 */
    repeated string backup_url = 3;
    /** 带宽 */
    uint32 bandwidth = 4;
    /** 编码id */
    optional uint32 codecid = 5;
    /** md5 */
    optional string md5 = 6;
    /** 大小 */
    uint64 size = 7;
    /** 帧率 */
    optional string frame_rate = 8;
    /** DRM密钥 */
    optional string widevine_pssh = 9;
}

/** 杜比伴音流信息 */
message DolbyItem {
    /** 杜比类型 */
    enum Type {
        /** NONE */
        NONE = 0;
        /** 普通杜比音效 */
        COMMON = 1;
        /** 全景杜比音效 */
        ATMOS = 2;
    }
    /** 杜比类型 */
    Type type = 1;
    /** 音频流 */
    repeated DashItem audio = 2;
}

/** 响度均衡操作信息 */
message VolumeInfo {
    /** Measured integrated loudness 实际综合响度 */
    double measured_i = 1;
    /** Measured loudness range 实际响度范围 */
    double measured_lra = 2;
    /** Measured true peak 实际响度真峰值 */
    double measured_tp = 3;
    /** Measured threshold 实际响度阈值 */
    double measured_threshold = 4;
    /** Target offset gain(Gain is applied before the true-peak limiter) 目标增益Offset(增益在真实峰值限制器之前应用) */
    double target_offset = 5;
    /** Target integrated loudness 目标综合响度 */
    double target_i = 6;
    /** Target true peak 目标响度真峰值 */
    double target_tp = 7;
}

/** HIRES伴音流信息 */
message LossLessItem {
    /** 是否为hires */
    bool is_lossless_audio = 1;
    /** 音频流信息 */
    optional DashItem audio = 2;
    /** 是否需要大会员 */
    bool need_vip = 3;
}